Fix footer overflow
Use flexbox to make page fit neatly https://caniuse.com/#feat=flexbox

--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -339,6 +339,9 @@ html {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     font-size: 1rem;
     font-weight: 400;
